@@ -3,5 +3,5 @@
 for dir in ~/scripts/*/.hg /projects/*/.hg
 do
     repo=`dirname $dir`
-    echo hg push -R $repo
+    hg push -R $repo
 done
